added possibleNextStates to cliStates in order to avoid switches